# stack_flask_sql_redis_celery

./: .env.example  CONTRIBUTING.rst  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  run_app.py
app/: __init__.py  blueprint.py  config.py  main.py
app/core/app_celery/: __init__.py  task.py
app/core/database/: base.py  db.py
app/core/decorators/: auth.py
app/core/exceptions/: __init__.py
app/core/mixins/: audit_columns.py
app/core/schema/: api_response.py
app/models/: base.py  user_model.py
app/schemas/: auth_schema.py  file_schema.py  user_schema.py
app/utils/: object_helpers.py  task.py
app/views/: auth_views.py  file_views.py  user_views.py
docs/: index.md
migrations/versions/: f0d772ed978f_init_model.py
scripts/: deploy_dev.sh  run_celery_beat.sh  run_celery_flower.sh  run_celery_worker.sh
tests/: test_foo.py
