[tool.poetry]
name = "demo-flask-sql-redis-celery"
version = "0.0.1"
description = "This is a template repository for Python projects that use Poetry for their dependency management."
authors = ["NguyenNT65 <fnguyennt65@fpt.com.vn>"]
repository = "https://github.com/Nguyen2442/demo-flask-sql-redis-celery"
documentation = "https://Nguyen2442.github.io/demo-flask-sql-redis-celery/"
readme = "README.md"
packages = [
  {include = "app"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
flask = "^2.2.3"
redis = "^4.5.1"
celery = "^5.2.7"
flask-sqlalchemy = "^3.0.3"
flask-restful = "^0.3.9"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.0"
flask-migrate = "^4.0.4"
flask-jwt-extended = "^4.4.4"
werkzeug = "^2.2.3"
flask-pydantic = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.6.4"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["app"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["app"]


